k8s/todo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
 
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data/pgdata     
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: todo-db-pvc
