k8s/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 80
