k8s/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-project
spec:
  selector:
    app: todo-backend
  ports:
    - port: 5000
      targetPort: 5000
