k8s/todo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  namespace: todo-project
spec:
  selector:
    app: todo-db
  ports:
    - port: 5432
      targetPort: 5432
